--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -55,6 +55,7 @@ nav a:hover {
 .book{
     background-color: #8fa998;
     color: #2c2c2c;
+    text-decoration: none;
 }
 
 .book:hover{
@@ -79,7 +80,7 @@ main section{
 
 #background{
     height: 725px;
-    /* background-color: ; */
+    background-color: #5b493b;
 }
 
 .msg{
