--- a/class_builder/styles/site-plan.css
+++ b/class_builder/styles/site-plan.css
@@ -9,10 +9,10 @@ Fonts are separated by a | */
 /* TODO: Week 07 - The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them. */
 :root {
   /* TODO: Week07 - change the values below to your colors from your palette */
-  --primary-color: #396e94;
-  --secondary-color: #e7c24f;
-  --accent1-color: #a42212;
-  --accent2-color: white;
+  --primary-color: #006eb8;
+  --secondary-color: #c2c2cf;
+  --accent1-color: #222226;
+  --accent2-color: #004979;
 
   /* TODO: Week07 - change the values below to your chosen font(s). */
   /* TODO: Week07 - make sure you provide more than one font option for each to handle fallback */
@@ -20,15 +20,15 @@ Fonts are separated by a | */
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* TODO: Week07 - these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396e94; /* headlines on a white background */
-  --headline-color-on-color: white; /* headlines on a colored background */
-  --paragraph-color-on-white: #396e94; /* paragraph text on a white background */
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */
-  --paragraph-background-color: #396e94;
-  --nav-link-color: #396e94;
-  --nav-background-color: #d4ac0d;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396e94;
+  --headline-color-on-white: #006eb8; /* headlines on a white background */
+  --headline-color-on-color: #f5f5ff; /* headlines on a colored background */
+  --paragraph-color-on-white: #006eb8; /* paragraph text on a white background */
+  --paragraph-color-on-color: #f5f5ff; /* paragraph text on a colored background */
+  --paragraph-background-color: #006eb8;
+  --nav-link-color: #006eb8;
+  --nav-background-color: #c2c2cf;
+  --nav-hover-link-color: #004979;
+  --nav-hover-background-color: #006eb8;
   /* TODO: Week07 - test out your colors using by viewing your html and interacting with it.
    * - Make sure the contrast is enough that things can be easily read (i.e. https://coolors.co/contrast-checker/)
    */
