--- a/class_builder/styles/site-plan.css
+++ b/class_builder/styles/site-plan.css
@@ -4,7 +4,8 @@ Any spaces in your font name should be replaced with a +.
 Fonts are separated by a | */
 
 /* TODO: Week07 - if you choose to import fonts, change this line to match your import. */
-@import url("https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&family=Barlow+Semi+Condensed:wght@300;400;600&display=swap");
+
 
 /* TODO: Week 07 - The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them. */
 :root {
@@ -16,8 +17,8 @@ Fonts are separated by a | */
 
   /* TODO: Week07 - change the values below to your chosen font(s). */
   /* TODO: Week07 - make sure you provide more than one font option for each to handle fallback */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Work Sans", sans-serif;
+  --paragraph-font: "Barlow Semi Condensed", sans-serif;
 
   /* TODO: Week07 - these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #006eb8; /* headlines on a white background */
@@ -47,12 +48,7 @@ img {
   display: block;
   margin: 0 auto;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
 }
@@ -139,47 +135,56 @@ nav a:hover {
 .sitemap {
   display: grid;
   justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas:
-    ". . home home . ."
-    ". . . top . ."
-    ". left left right right ."
-    "page2 page2 . . page3 page3";
+  grid-template-columns: repeat(3, 150px);
+  grid-template-rows: auto auto;
+  gap: 20px;
+  position: relative;
 }
+
 .sitemap > div {
   text-align: center;
+  background-color: #ccc;
+  padding: 1em;
+  border: 1px solid #999;
 }
+
 .sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
+  grid-column: 2 / 3;
 }
+
+.sitemap::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(300px + 20px); /* Adjusted width */
+  height: 1px;
+  background-color: black;
+}
+
+.sitemap::after {
+  content: "";
+  position: absolute;
+  top: calc(50% + 55px); /* Adjusted top position */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1px;
+  height: 50px;
+  background-color: black;
+}
+
 .sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
+
 .sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
+.sm-page4 {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
 }
