--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,7 +24,13 @@ body{
     width: 80px;}
 
 header{
-    background-color: #104547;}
+    background-color: #104547;
+display: grid;
+grid-template-columns: 150px auto;}
+
+nav {
+    display: flex;
+    justify-content: space-around;}
 
 nav a{
     text-align: center;
@@ -37,20 +43,34 @@ nav a:hover {
     color:#000000;}
 
 .home-title{
-    background-color:#71857850;
-    color:#5b493b;
+    color:#edc3a2;
     font-size: 2em;
     margin-top: 10px;}
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;}
+
 #hero-img{
     width: 100%;}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;}
 
 #hero-msg h1{
     text-align: center;}
 
 #hero-msg h4{
     text-align: center;
-    color: #705a49;}
+    color: white;}
 
 .button-box{
     text-align: center;}
@@ -74,6 +94,10 @@ nav a:hover {
 
 main section{
     text-align: center;}
+
+.card-img, .mountains {
+    width: 100%;
+}
 
 .join{
     background-color: #584738;
@@ -139,3 +163,65 @@ footer .social img{
 
 main section img {
     box-sizing: border-box;}
+
+body {
+    /* Center the form on the page */
+    text-align: center;
+    }
+    
+    form {
+    display: inline-block;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+    }
+    
+    p + p {
+    margin-top: 1em;
+    }
+    
+    label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    min-width: 90px;
+    text-align: right;
+    }
+    
+    input,
+    textarea {
+    /* To make sure that all text fields have the same font settings
+        By default, text areas have a monospace font */
+    font: 1em sans-serif;
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+    /* Match form field borders */
+    border: 1px solid #999;
+    }
+    
+    input:focus,
+    textarea:focus {
+    /* Set the outline width and style */
+    outline-style: solid;
+    /* To give a little highlight on active elements */
+    outline-color: #000;
+    }
+    
+    textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+    /* Provide space to type some text */
+    height: 5em;
+    }
+    
+    .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+    }
+    
+    button {
+    /* This extra margin represent roughly the same space as the space
+        between the labels and their text fields */
+    margin-left: 0.5em;
+    }
