--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,7 +14,8 @@ body{
     background-color: #8fa998;
     font-family: var(--paragraph-font);
     margin: 0;
-    padding: 0;}
+    padding: 0;
+    text-align: center;}
 
 #content{
     max-width: 1600px;
@@ -95,9 +96,41 @@ nav a:hover {
 main section{
     text-align: center;}
 
+main.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);}
+
 .card-img, .mountains {
-    width: 100%;
-}
+    width: 100%;}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;}
 
 .join{
     background-color: #584738;
@@ -114,12 +147,17 @@ main section{
 
 #background{
     height: 725px;
-    background-color: #5b493b;}
+    background-color: #5b493b;
+    grid-column: 1/11;
+    grid-row: 4/9;}
 
 .msg{
     background-color: #584738;
     line-height: 1.5em;
-    padding: 35px;}
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;}
 
 .msg h2{
     color: #c6c5c3;}
@@ -133,7 +171,10 @@ footer{
     background-color: #104547;
     color:#b4b4b4;
     padding: 25px 50px;
-    margin-top: 200px;}
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;}
 
 footer p{
     font-size: 1.2em;}
@@ -155,73 +196,97 @@ footer a:hover{
 footer .social img{
     padding-top: 15px;}
 
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;}
-
-.card-img {
-    border: 10px solid #d9c2a3;}
-
 main section img {
     box-sizing: border-box;}
 
-body {
-    /* Center the form on the page */
-    text-align: center;
-    }
-    
-    form {
-    display: inline-block;
-    /* Form outline */
-    padding: 1em;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    }
-    
-    p + p {
-    margin-top: 1em;
-    }
-    
-    label {
-    /* Uniform size & alignment */
-    display: inline-block;
-    min-width: 90px;
-    text-align: right;
-    }
-    
-    input,
-    textarea {
-    /* To make sure that all text fields have the same font settings
-        By default, text areas have a monospace font */
-    font: 1em sans-serif;
-    /* Uniform text field size */
-    width: 300px;
-    box-sizing: border-box;
-    /* Match form field borders */
-    border: 1px solid #999;
-    }
-    
-    input:focus,
-    textarea:focus {
-    /* Set the outline width and style */
-    outline-style: solid;
-    /* To give a little highlight on active elements */
-    outline-color: #000;
-    }
-    
-    textarea {
-    /* Align multiline text fields with their labels */
-    vertical-align: top;
-    /* Provide space to type some text */
-    height: 5em;
-    }
-    
-    .button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
-    }
-    
-    button {
+@media screen and (max-width: 900px) {
+    #hero, main.home-grid {
+        display: block;
+        height: auto;}
+    nav, footer {
+        flex-direction: column;}
+    nav a {
+        display: block;
+        padding: 15px;}
+    #hero {
+        margin-top: 0;}
+    #hero-msg {
+        margin-top: 0;}
+    #hero-msg h4 {
+        display: none;}
+    #hero-msg h1 {
+        color: #6f7364;}
+    .home-title {
+        font-size: 25px;}
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;}
+    #background {
+        display: none;}
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;}
+    footer {
+        margin-top: 25px;}}
+
+/* New section for contact us page */
+form {
+display: inline-block;
+/* Form outline */
+padding: 1em;
+border: 1px solid #ccc;
+border-radius: 1em;}
+
+p + p {
+margin-top: 1em;}
+
+label {
+/* Uniform size & alignment */
+display: inline-block;
+min-width: 90px;
+text-align: right;}
+
+input,textarea {
+/* To make sure that all text fields have the same font settings
+    By default, text areas have a monospace font */
+font: 1em sans-serif;
+/* Uniform text field size */
+width: 300px;
+box-sizing: border-box;
+/* Match form field borders */
+border: 1px solid #999;}
+
+input:focus,textarea:focus {
+/* Set the outline width and style */
+outline-style: solid;
+/* To give a little highlight on active elements */
+outline-color: #000;}
+
+textarea {
+/* Align multiline text fields with their labels */
+vertical-align: top;
+/* Provide space to type some text */
+height: 5em;}
+
+.button {
+/* Align buttons with the text fields */
+padding-left: 90px; /* same size as the label elements */}
+
+button {
     /* This extra margin represent roughly the same space as the space
         between the labels and their text fields */
-    margin-left: 0.5em;
-    }
+margin-left: 0.5em;}
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      }
+
+.moveDown {
+    margin-top: 3em;}
