--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,8 +8,8 @@ Fonts are separated by a & */
 :root {
   /* TODO: Week02 - change the values below to your colors from your palette */
   --primary-color: #104547;
-  --secondary-color: #7e6551;
-  --accent1-color: #8fa998;
+  --secondary-color: #8fa998;
+  --accent1-color: #7e6551;
   --accent2-color: #3C779C;
 
   /* TODO: Week02 - change the values below to your chosen font(s). */
@@ -22,11 +22,11 @@ Fonts are separated by a & */
   --headline-color-on-color: white; /* headlines on a colored background */
   --paragraph-color-on-white: #104547; /* paragraph text on a white background */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */
-  --paragraph-background-color: #7e6551;
+  --paragraph-background-color: #8fa998;
   --nav-link-color: white;
-  --nav-background-color: #3C779C;
+  --nav-background-color: #104547;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #8fa998;
+  --nav-hover-background-color: #3C779C;
   /* TODO: Week02 - test out your colors using by viewing your html and interacting with it. Make sure the contrast is enough that things can be easily read*/
 }
 
