--- a/class_builder/styles/site-plan.css
+++ b/class_builder/styles/site-plan.css
@@ -32,8 +32,7 @@ Fonts are separated by a | */
   --nav-hover-background-color: #006eb8;
   /* TODO: Week07 - test out your colors using by viewing your html and interacting with it.
    * - Make sure the contrast is enough that things can be easily read (i.e. https://coolors.co/contrast-checker/)
-   */
-}
+   */}
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
@@ -42,95 +41,80 @@ body {
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
-  text-align: center;
-}
+  text-align: center;}
 img {
   display: block;
-  margin: 0 auto;
-}
+  margin: 0 auto;}
+
+.schedule-logo{
+  width: 100px;
+  height: 100px;}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: var(--heading-font);
-  color: var(--headline-color-on-white);
-}
+  color: var(--headline-color-on-white);}
 h2 {
-  text-align: center;
-}
+  text-align: center;}
 hr {
   height: 3px;
   margin: 35px 0;
-  background: var(--accent1-color);
-}
+  background: var(--accent1-color);}
 header {
   padding: 1em;
   text-align: center;
   color: var(--headline-color-on-color);
-  background-color: var(--paragraph-background-color);
-}
+  background-color: var(--paragraph-background-color);}
 header > h1,
 header > h2 {
-  color: var(--headline-color-on-color);
-}
+  color: var(--headline-color-on-color);}
 
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
-  padding: 1em;
-}
+  padding: 1em;}
 .colors {
   width: 100%;
   min-width: 350px;
   margin: 30px auto;
-  text-align: center;
-}
+  text-align: center;}
 .colors th {
-  background-color: #999;
-}
+  background-color: #999;}
 .colors td {
   width: 25%;
-  height: 3em;
-}
+  height: 3em;}
 
 .primary {
-  background-color: var(--primary-color);
-}
+  background-color: var(--primary-color);}
 .secondary {
-  background-color: var(--secondary-color);
-}
+  background-color: var(--secondary-color);}
 .accent1 {
   background-color: var(--accent1-color);
-}
+  color: var(--paragraph-color-on-color);}
 .accent2 {
-  background-color: var(--accent2-color);
-}
+  background-color: var(--accent2-color);}
 
 p.colored {
   background-color: var(--paragraph-background-color);
-  color: var(--paragraph-color-on-color);
-}
+  color: var(--paragraph-color-on-color);}
 
 nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
   text-align: center;
-  font-size: 1.2em;
-}
+  font-size: 1.2em;}
 nav {
   list-style-type: none;
-  display: flex;
-}
+  display: flex;}
 nav a {
   padding: 1em;
   min-width: 120px;
-  text-decoration: none;
-}
+  text-decoration: none;}
 nav a:link,
 nav a:visited {
-  color: var(--nav-link-color);
-}
+  color: var(--nav-link-color);}
 nav a:hover {
   color: var(--nav-hover-link-color);
-  background-color: var(--nav-hover-background-color);
-}
+  background-color: var(--nav-hover-background-color);}
 
 .sitemap {
   display: grid;
@@ -138,19 +122,16 @@ nav a:hover {
   grid-template-columns: repeat(3, 150px);
   grid-template-rows: auto auto;
   gap: 20px;
-  position: relative;
-}
+  position: relative;}
 
 .sitemap > div {
   text-align: center;
   background-color: #ccc;
   padding: 1em;
-  border: 1px solid #999;
-}
+  border: 1px solid #999;}
 
 .sm-home {
-  grid-column: 2 / 3;
-}
+  grid-column: 2 / 3;}
 
 .sitemap::before {
   content: "";
@@ -160,8 +141,7 @@ nav a:hover {
   transform: translate(-50%, -50%);
   width: calc(300px + 20px); /* Adjusted width */
   height: 1px;
-  background-color: black;
-}
+  background-color: black;}
 
 .sitemap::after {
   content: "";
@@ -171,20 +151,16 @@ nav a:hover {
   transform: translateX(-50%);
   width: 1px;
   height: 50px;
-  background-color: black;
-}
+  background-color: black;}
 
 .sm-page2 {
   grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
+  grid-row: 2 / 3;}
 
 .sm-page3 {
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
+  grid-row: 2 / 3;}
 
 .sm-page4 {
   grid-column: 3 / 4;
-  grid-row: 2 / 3;
-}
+  grid-row: 2 / 3;}
